# drift-racing-ros

./: README.md  gazebo_gym_env.py
src/drift_racer/: CMakeLists.txt  package.xml
src/drift_racer/arduino/: h_bridge_sketch.ino
src/drift_racer/launch/: drift_racer.launch  nav.launch  training_data_collector.launch
src/drift_racer/models/: model-01-0.06.h5  model-01-0.06.tflite  model-02-0.05.h5  model-02-0.05.tflite  model-06-0.11.h5
src/drift_racer/models/020220/: model-01-0.087.tflite  model-02-0.094.tflite  model-03-0.128.tflite
src/drift_racer/models/220120/: converted_model.tflite  model-02-0.139.h5  model-02-0.139.tflite  model-05-0.126.h5
src/drift_racer/models/290120/: model-01-0.090.h5  model-01-0.090.tflite  model-02-0.094.h5  model-02-0.094.tflite  model-03-0.115.h5  model-03-0.115.tflite  model-04-0.101.h5  model-04-0.101.tflite  model-05-0.115.h5  model-05-0.115.tflite
src/drift_racer/src/: actuators_controller.py  camera_capture.py  camera_image_retriever.py  check_tflite.py  converted_model.tflite  drive_agent.py  joystick_teleop.cpp  nav_controller.py  picamera_image_publisher.py  test_tflite.py  training_data_collector.py
src/drift_racing_sim/: CMakeLists.txt  package.xml
src/drift_racing_sim/src/: dqn_agent.py  drift_gym.py  main.py  my_utils.py
